--- a/public/stylesheets/gallery.css
+++ b/public/stylesheets/gallery.css
@@ -14,6 +14,10 @@
     font-family: 'Playfair Display', serif;
 }
 
+.dec-text {
+    text-align: center;
+}
+
 @media (min-width: 401px) {
     .parent {
         font-weight: 400;
