--- a/public/stylesheets/main_small.css
+++ b/public/stylesheets/main_small.css
@@ -72,8 +72,8 @@
 
     .detail-img{
         display: block;
-        min-height: 30vh;
-        max-height: 40vh;
+        min-height: 25vh;
+        max-height: 30vh;
         min-width: 0 !important;
         margin: 0 auto;
     }
@@ -82,8 +82,8 @@
     }
 
     .detail-text{
-        overflow-y: auto;
-        max-height: calc(50vh - 40vh - 36px);
+        overflow-y: scroll;
+        max-height: calc(60vh - 40vh - 36px);
         margin: 5px 0;
     }
 
