--- a/public/stylesheets/gallery.css
+++ b/public/stylesheets/gallery.css
@@ -12,6 +12,7 @@
     flex-direction: column;
     align-items: center;
     font-family: 'Playfair Display', serif;
+    text-align: center;
 }
 
 .dec-text {
