--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width">
     <link rel="icon" type="image/png" href="favicon.png">
     <!--Main style sheets--!>
-    <link rel="stylesheet" type="text/css" href="stylesheets/gallery.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/home.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/main_large.css">
     <link rel="stylesheet" media="screen and (max-width: 700px)" href="stylesheets/main_small.css">
     <!--Font Icon style sheet --!>
